<?xml version="1.0"?>
<package format="3">
  <name>faze4_ros</name>
  <version>0.0.0</version>
  <description>Metapackage for `faze4_ros` demos packages</description>

  <maintainer email="hx2003dev@gmail.com">HX2003</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>faze4_description</exec_depend>
  <exec_depend>faze4_hardware</exec_depend>
  <exec_depend>faze4_hardware_driver</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
